--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -15,3 +15,15 @@ spring.jpa.hibernate.naming-strategy = org.hibernate.cfg.ImprovedNamingStrategy
 #spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5Dialect
 # default-store in spring session. it will be set in redis only outside.
 spring.session.store-type=none
+
+#configure upload file
+#默认支持文件上传.
+spring.http.multipart.enabled=true
+#支持文件写入磁盘.
+spring.http.multipart.file-size-threshold=0
+#上传文件的临时目录
+spring.http.multipart.location=/
+ # 最大支持文件大小
+spring.http.multipart.max-file-size=1Mb
+# 最大支持请求大小
+spring.http.multipart.max-request-size=10Mb
