add upload function

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -27,3 +27,9 @@ spring.http.multipart.location=/
 spring.http.multipart.max-file-size=1Mb
 # 最大支持请求大小
 spring.http.multipart.max-request-size=10Mb
+
+
+#e-mail configuration
+
+spring.mail.host=smtp.tongji.edu.cn
+spring.mail.default-encoding=UTF-8
